--- a/.env
+++ b/.env
@@ -29,13 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.apikdigital.id
-MAIL_PORT=465
-MAIL_USERNAME=no-reply@apikdigital.id
-MAIL_PASSWORD=Wq3f28ae7
-MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS="no-reply@apikdigital.id"
-MAIL_FROM_NAME="APIK"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=fajrikmal141@gmail.com
+MAIL_PASSWORD=bakfcjfhpopfusey
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=fajrikmal141@gmail.com
+MAIL_FROM_NAME="TERSIMPAN CERITA"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
